@@ -230,6 +230,24 @@ name|client
 operator|.
 name|solrj
 operator|.
+name|embedded
+operator|.
+name|JettySolrRunner
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
 name|impl
 operator|.
 name|CloudSolrClient
@@ -713,6 +731,81 @@ argument_list|,
 literal|"solr.BasicAuthPlugin"
 argument_list|,
 literal|20
+argument_list|)
+expr_stmt|;
+name|boolean
+name|found
+init|=
+literal|false
+decl_stmt|;
+for|for
+control|(
+name|JettySolrRunner
+name|jettySolrRunner
+range|:
+name|miniCluster
+operator|.
+name|getJettySolrRunners
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|baseUrl
+operator|.
+name|contains
+argument_list|(
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|jettySolrRunner
+operator|.
+name|getLocalPort
+argument_list|()
+argument_list|)
+argument_list|)
+condition|)
+block|{
+name|found
+operator|=
+literal|true
+expr_stmt|;
+name|jettySolrRunner
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|jettySolrRunner
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|verifySecurityStatus
+argument_list|(
+name|cl
+argument_list|,
+name|baseUrl
+operator|+
+literal|"/admin/authentication"
+argument_list|,
+literal|"authentication/class"
+argument_list|,
+literal|"solr.BasicAuthPlugin"
+argument_list|,
+literal|20
+argument_list|)
+expr_stmt|;
+break|break;
+block|}
+block|}
+name|assertTrue
+argument_list|(
+literal|"No server found to restart , looking for : "
+operator|+
+name|baseUrl
+argument_list|,
+name|found
 argument_list|)
 expr_stmt|;
 name|String
